amélioration globale de l'interfaction affichage du tableau

--- a/src/app/features/member/components/member-list/member-list.component.html
+++ b/src/app/features/member/components/member-list/member-list.component.html
@@ -1,7 +1,15 @@
 <div class="container">
   <app-table-header></app-table-header>
-  <app-table-body></app-table-body>
-  <app-table-footer></app-table-footer>
 
+  <div *ngIf="loading$ | async" class="loading-indicator">
+    <div class="spinner-border text-primary" role="status">
+      <span class="visually-hidden">Loading...</span>
+    </div>
+  </div>
+
+  <app-table-body [members]="members$ | async"></app-table-body>
+
+  <app-table-footer></app-table-footer>
 </div>
+
 
